# QtThreadedExample

./: CMakeLists.txt  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h
